[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"
[dependencies]
actix-web = { version = "4.9.0" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12" }
serde = { version = "1", default-features = false, features = ["derive"] }
config = "0.14.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = {version = "0.10.3", features = ["serde"]}
tracing-actix-web = "0.7"
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[[bin]]
path = "src/main.rs"
name = "zero-to-production"